Fixed cut-offs
Overflow:hidden; cut off content on smaller vh screens

--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,24 @@
 *{
     padding: 0;
     margin: 0;
+    
 }
 body{
+    background-image: linear-gradient(to bottom left, var(--background-main), var(--background-main2));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    z-index: -100;
+
 }
-#root{
-    background-image: linear-gradient(to bottom left, var(--background-main), var(--background-main2));
+#root{ 
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    z-index: -2;
-    overflow: hidden;
 }
 #topNav{
     display: flex;
@@ -33,6 +36,9 @@ body{
 #topLogo{
     width: 6vw;
     height: auto;
+}
+#topLogo:hover{
+    cursor: pointer;
 }
 #mainOptions{
     width: 50%;
